--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,11 @@ apply plugin: 'kotlin-android'
 
 def versionMajor = 0
 def versionMinor = 1
-def versionPatch = 0
+def versionPatch = 1
 
 def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
 def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm:ss'Z'", TimeZone.getTimeZone("UTC"))
+def buildSuffix = "${versionMajor}-${versionMinor}-${versionPatch}"
 
 buildscript {
     repositories {
@@ -14,7 +15,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.21.2'
     }
 }
 
@@ -38,13 +39,19 @@ android {
 
         buildConfigField "String", "GIT_SHA", "\"${gitSha}\""
         buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
+
+        buildConfigField "String", "PARSE_APPLICATION_ID", "\"${System.env.PARSE_APPLICATION_ID}\""
+        buildConfigField "String", "PARSE_CLIENT_KEY", "\"${System.env.PARSE_CLIENT_KEY}\""
+
+
     }
+
     productFlavors {
         dev {
             minSdkVersion 21
         }
         prod {
-            minSdkVersion 14
+            minSdkVersion 15
         }
     }
     buildTypes {
@@ -55,7 +62,24 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def alignedOutputFile = output.outputFile
+            def unalignedOutputFile = output.packageApplication.outputFile
+
+            // Customise APK filenames (to include build version)
+            if (variant.buildType.zipAlignEnabled) {
+                // normal APK
+                output.outputFile = new File(alignedOutputFile.parent, alignedOutputFile.name.replace(".apk", "-" + buildSuffix + ".apk"))
+            }
+            // 'unaligned' APK
+            output.packageApplication.outputFile = new File(unalignedOutputFile.parent, unalignedOutputFile.name.replace(".apk", "-" + buildSuffix + ".apk"))
+        }
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -71,9 +95,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile 'com.pawegio.kandroid:kandroid:0.4.0@aar'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+    compile 'com.parse.bolts:bolts-android:1.3.0'
+    compile 'com.parse:parse-android:1.12.0'
 }
 buildscript {
     ext.kotlin_version = '1.0.0-beta-4584'
