--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ android:
     - android-15
     - extra-android-support
 
+before_install:
+  - chmod +x ./gradlew
+
 script:
   - ./gradlew test
   - ./gradlew build
