--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            minifyEnabled false // TODO : naprawić
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
