--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ def versionPatch = 0
 def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
 def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm:ss'Z'", TimeZone.getTimeZone("UTC"))
 def buildSuffix = "${versionMajor}-${versionMinor}-${versionPatch}"
+def gitCommitCount = Integer.parseInt('git rev-list --count HEAD'.execute([], project.rootDir).text.trim())
 
 afterEvaluate {
     initFabricPropertiesIfNeeded()
@@ -26,14 +27,18 @@ def initFabricPropertiesIfNeeded() {
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.21.2'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
     }
 }
 
 apply plugin: 'io.fabric'
+apply plugin: 'com.android.application'
+apply plugin: 'com.github.ben-manes.versions'
 
 repositories {
     mavenCentral()
@@ -44,11 +49,13 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "pl.ownvision.dogsociety"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
+        versionCode gitCommitCount
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
 
         buildConfigField "String", "GIT_SHA", "\"${gitSha}\""
@@ -56,8 +63,6 @@ android {
 
         buildConfigField "String", "PARSE_APPLICATION_ID", "\"${System.env.PARSE_APPLICATION_ID}\""
         buildConfigField "String", "PARSE_CLIENT_KEY", "\"${System.env.PARSE_CLIENT_KEY}\""
-
-
     }
 
     signingConfigs {
@@ -79,6 +84,11 @@ android {
             signingConfig signingConfigs.release
         }
 
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     android.applicationVariants.all { variant ->
@@ -107,12 +117,22 @@ android {
     }
 }
 
+
+kapt {
+    generateStubs = true
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.google.dagger:dagger:2.0.2'
+    kapt 'com.google.dagger:dagger-compiler:2.0.2'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
     testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.hamcrest:hamcrest-library:1.1'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
@@ -124,6 +144,7 @@ dependencies {
     }
     compile 'com.parse.bolts:bolts-android:1.3.0'
     compile 'com.parse:parse-android:1.12.0'
+    compile 'de.psdev.licensesdialog:licensesdialog:1.8.0'
 }
 buildscript {
     ext.kotlin_version = '1.0.0-beta-4584'
