--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.21.2'
+        classpath 'io.fabric.tools:gradle:1.+'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
     }
 }
@@ -39,6 +39,7 @@ buildscript {
 apply plugin: 'io.fabric'
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'kotlin-android-extensions'
 
 repositories {
     mavenCentral()
@@ -47,7 +48,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     useLibrary 'org.apache.http.legacy'
 
@@ -107,7 +108,8 @@ android {
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main.kotlin.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += 'src/main/java'
     }
 
     testOptions {
@@ -134,11 +136,11 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    compile 'com.pawegio.kandroid:kandroid:0.4.0@aar'
+    compile 'com.pawegio.kandroid:kandroid:0.5.0@aar'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
@@ -147,7 +149,8 @@ dependencies {
     compile 'de.psdev.licensesdialog:licensesdialog:1.8.0'
 }
 buildscript {
-    ext.kotlin_version = '1.0.0-beta-4584'
+    // https://kotlinlang.org/docs/reference/using-gradle.html
+    ext.kotlin_version = '1.0.1-2'
     repositories {
         mavenCentral()
     }
