--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ buildscript {
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
     }
 }
 
@@ -78,6 +78,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            ext.enableCrashlytics = false
         }
         release {
             minifyEnabled true
@@ -108,7 +109,6 @@ android {
     }
 
     sourceSets {
-        main.kotlin.srcDirs += 'src/main/kotlin'
         main.java.srcDirs += 'src/main/java'
     }
 
@@ -124,12 +124,14 @@ kapt {
     generateStubs = true
 }
 
+apply plugin: 'com.neenbedankt.android-apt'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.dagger:dagger:2.0.2'
-    kapt 'com.google.dagger:dagger-compiler:2.0.2'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.google.dagger:dagger:2.3'
+    kapt 'com.google.dagger:dagger-compiler:2.3'
+    // provided 'org.glassfish:javax.annotation:10.0-b28'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
@@ -141,11 +143,16 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile 'com.pawegio.kandroid:kandroid:0.5.0@aar'
+
+    // https://fabric.io/kits/android/crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
-    compile 'com.parse.bolts:bolts-android:1.3.0'
-    compile 'com.parse:parse-android:1.12.0'
+    // https://github.com/BoltsFramework/Bolts-Android
+    compile 'com.parse.bolts:bolts-android:1.4.0'
+    // https://github.com/ParsePlatform/Parse-SDK-Android
+    compile 'com.parse:parse-android:1.13.0'
+    // https://github.com/PSDev/LicensesDialog
     compile 'de.psdev.licensesdialog:licensesdialog:1.8.0'
 }
 buildscript {
