--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,13 +124,12 @@ kapt {
     generateStubs = true
 }
 
-apply plugin: 'com.neenbedankt.android-apt'
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.dagger:dagger:2.3'
-    kapt 'com.google.dagger:dagger-compiler:2.3'
+    // TODO : upgrade to 2.3 when fixed https://code.google.com/p/android/issues/detail?id=206407
+    compile 'com.google.dagger:dagger:2.2'
+    kapt 'com.google.dagger:dagger-compiler:2.2'
     // provided 'org.glassfish:javax.annotation:10.0-b28'
 
     testCompile 'junit:junit:4.12'
